New base setup continue

--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,8 @@
   <!-- pace.js -->
   <script src="https://cdn.jsdelivr.net/npm/pace-js@latest/pace.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pace-js@latest/pace-theme-default.min.css">
-  <!-- bootstrap notify -->
-  
+   <!-- material icons -->
+   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 </head>
 
 <body>
